# spec-codex-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
app/api/: app.py  deps.py
app/api/routers/: health.py
