[project]
name = "spec-codex-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alchemy>=20.5",
    "fastapi>=0.139.0",
    "pgvector>=0.5.0",
    "psycopg>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn>=0.51.0",
]
