[project]
name = "spec-codex-engine"
version = "0.1.0"
description = "Autonomous software engineering platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alchemy>=20.5",
    "fastapi>=0.139.0",
    "pgvector>=0.5.0",
    "psycopg>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=2.20.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]

target-version = "py313"

line-length = 100

exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "alembic/versions",
]

[tool.ruff.format]

quote-style = "double"

indent-style = "space"

line-ending = "lf"

docstring-code-format = true

[tool.ruff.lint]

select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

ignore = [
    "E501",
]

[tool.mypy]

python_version = "3.13"

plugins = []

ignore_missing_imports = true

warn_unused_configs = true

warn_unused_ignores = true

warn_redundant_casts = true

warn_return_any = true

check_untyped_defs = true

disallow_untyped_defs = true

pretty = true

show_error_codes = true

[tool.pytest.ini_options]

testpaths = [
    "tests",
]

python_files = [
    "test_*.py",
]

asyncio_mode = "auto"